fixed footer on mobile
WOWOWOWWW

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ p {
 	margin-right: 1.9%;
 	float: left;
 }
-.product:nth-child(2) {
+.product:nth-child(3) {
 	max-width: 100%;
 	height: auto;
 	margin-right: 0px;
